flux/apps/seedbox/torrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: seedbox
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          volumeMounts:
            - name: media-storage
              mountPath: /mnt/future/medias/downloads
              subPath: downloads
            - name: media-storage
              mountPath: /mnt/future/medias/ratio
              subPath: ratio
            - name: config-storage
              mountPath: /config

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: tun-device
          hostPath:
            path: /dev/net/tun
            type: CharDevice
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-storage
        - name: config-storage
          persistentVolumeClaim:
            claimName: qbittorrent-config
