flux/apps/seedbox/torrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: seedbox
spec:
  selector:
    app: qbittorrent
  ports:
  - name: webui
    port: 8080
    targetPort: webui
    protocol: TCP
