flux/apps/seedbox/torrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: seedbox
spec:
  parentRefs:
  - name: vlan12-gateway
    namespace: default
  hostnames:
  - torrent.logikdev.fr
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: qbittorrent
      port: 8080
